# test_task_playwright_python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  constants.py  index.html  pyproject.toml  tox.ini
.github/workflows/: test.yml
10/: index.html
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/data/test-cases/: 3b23157a5118ac45.json  c7c4c679de60d35a.json  d55d8cefc7d29af5.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  duration-trend.json  history.json
10/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/data/attachments/: a444df3036585c89.txt
11/export/: influxDbData.txt  prometheusData.txt
11/history/: duration-trend.json  history.json
11/widgets/: categories-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
9/: index.html
9/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
9/export/: influxDbData.txt  prometheusData.txt
9/history/: categories-trend.json  duration-trend.json
9/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
helpers/: assert_utils.py
last-history/: history.json
pages/: base_page.py  content_page.py  home_page.py  wallpaper_page.py
tests/: conftest.py
tests/content_tests/: test_wallpapers.py
(+7 files in other folders)
