[project]
name = "playwright-automation"
version = "0.1.0"
description = "UI Automation with Playwright and Pytest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.41.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "pytest-xdist>=3.5.0",
    "allure-pytest>=2.13.0"
]

[tool.uv]
dev-dependencies = [
    "tox>=4.12.0",
    "tox-uv>=1.2.0",
    "ruff>=0.2.0"
]

[tool.pytest.ini_options]
addopts = "--browser chromium --slowmo 500 -n auto --alluredir=allure-results --screenshot=only-on-failure"
testpaths = ["tests"]

[tool.ruff]
line-length = 120